--- a/01-introduction-to-react/homework/03/index.html
+++ b/01-introduction-to-react/homework/03/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello world</title>
+    <title>Task 03</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.9/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.9/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
